src/js/list/index.scss
/**
 * https://material.google.com/components/lists.html#lists-specs
 */

@import "../../css/mixins";

.List {
  padding: 8px 0;
  margin: 0;
  list-style: none;
  background-color: white;
}

.List-row-text {
  flex-shrink: 1;
  min-width: 150px;
}

.List-row-text-primary {
  font-size: 16px;
  margin: 0;
  margin-bottom: 6px;
  font-weight: normal;
  padding: 0;
}

.List-row--oneline .List-row-text-primary {
  margin-bottom: 0;
}

.List-row--islink:focus,
.List-row--selectable:hover,
.List-row--islink:hover {
  background-color: #f5f5f5;
  transition: background-color 0.3s ease;
  outline: none;
}

.List-row--islink,
.List-row--selectable {
  cursor: pointer;
}

.List-row:not(.List-row--islink):focus,
.List-row--islink.active {
  background-color: #e9e9e9;
  outline: none;
}

.List-row-text-secondary,
.List-row-text-subheader {
  font-size: 14px;
  font-weight: normal;
  padding: 0;
  margin: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: inline-block;
  width: 100%;
  overflow: hidden;
}

.List-row-text-secondary {
  color: #808080;
}

.List-row--twoline {
  height: 72px;
}

.List-row--threeline {
  height: 88px;
}

.List-row {
  transition: background-color 0.3s ease;
  min-height: 48px;
  display: flex;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;

  /** This article suggest to increase padding for table and above
   * https://material.google.com/layout/metrics-keylines.html#metrics-keylines-keylines-spacing
   */
  @include medium {
    padding-left: 24px;
    padding-right: 24px;
  }

  text-decoration: none;
  width: 100%;
  color: inherit;
}

.List-row-icon-left,
.List-row-icon-right,
.List-row-avatar {
  flex-shrink: 0;
  width: 56px;
}

/* Three line rows have top aligned icons */
.List-row.List-row--threeline {
  align-items: flex-start;

  & > * {
    margin-top: 12px;
  }

  .List-row-avatar {
    align-items: flex-start;
  }
}

.List-row-icon-right {
  margin-left: auto;

  & > * {
    float: right;
  }
}

.List-row-avatar {
  height: 56px;
  display: flex;
  align-items: center;

  > * {
    border-radius: 100%;
    width: 40px;
  }
}

